--- a/octoprint_mrbeam/templates/settings/maintenance_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/maintenance_settings.jinja2
@@ -5,7 +5,7 @@
 {#    </p>#}
     <div class="scrollable maintenance-scrollable">
         <table class="table table-striped table-hover table-condensed table-hover maintenance-table">
-            <tr>
+            <tr data-bind="visible: airfilter3Used">
                 {######### PRE-FILTER #########}
                 <td class="maintenance-description-column">
                     <div data-tooltip-image="/plugin/mrbeam/static/img/air_filter/af3-prefilter.png">
@@ -34,7 +34,7 @@
 
                 </td>
             </tr>
-            <tr>
+            <tr data-bind="visible: airfilter3Used">
                 {######### CARBON FILTER #########}
                 <td class="maintenance-description-column">
                     <div data-tooltip-image="/plugin/mrbeam/static/img/air_filter/af3-mainfilter.png">
@@ -62,7 +62,7 @@
                 <td class="maintenance-reset-column">
                 </td>
             </tr>
-            <tr>
+            <tr data-bind="visible: !airfilter3Used()">
                 {######### PRE-FILTER #########}
                 <td class="maintenance-description-column">
                     <h4>{{ _('Air Filter: Pre-filter') }}</h4>
@@ -122,7 +122,7 @@
                     <button class="btn maintenance-reset-btn" data-test="maintenance-reset-button-pre-filter" data-bind="click: resetPrefilterUsage">{{ _('Reset') }}</button>
                 </td>
             </tr>
-            <tr>
+            <tr data-bind="visible: !airfilter3Used()">
                 {######### CARBON FILTER #########}
                 <td class="maintenance-description-column">
                     <h4>{{ _('Air Filter: Main filter') }}</h4>
