--- a/octoprint_mrbeam/templates/settings/maintenance_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/maintenance_settings.jinja2
@@ -9,7 +9,7 @@
                 {######### PRE-FILTER #########}
                 <td class="maintenance-description-column">
                     <div data-tooltip-image="/plugin/mrbeam/static/img/air_filter/af3-prefilter.png">
-                        <h4>{{ _('Air Filter III: Pre-filter') }}</h4>
+                        <h4>{{ _('Air Filter: Pre-filter') }}</h4>
                         <small class="maintenance-description">
                             {{ _('The pre filter filters all coarse particles from the exhaust air. Regular changing improves the air flow and preserves the main filter.*') }}
                         </small>
@@ -38,7 +38,7 @@
                 {######### CARBON FILTER #########}
                 <td class="maintenance-description-column">
                     <div data-tooltip-image="/plugin/mrbeam/static/img/air_filter/af3-mainfilter.png">
-                        <h4>{{ _('Air Filter III: Main filter') }}</h4>
+                        <h4>{{ _('Air Filter: Main filter') }}</h4>
                         <small class="maintenance-description">
                             {{ _('The main filter is a combined hepa and activated carbon filter. It filters both tiny particles and odours from the exhaust air.*') }}
                         </small>
@@ -80,8 +80,8 @@
                                 <small class="maintenance-description">
                                     {{ _('The pink pre-filter mat is suitable for all those who use materials that cause little material abrasion (acrylic felt, slate, concrete, foam rubber, acrylic, etc.).') }}
                                 </small>
-                                <div class="maintenance-links">
-                                    <a href="{{ _('https://www.mr-beam.org/en') + '/products/vorfilter-mrbeam?utm_source=beamos&utm_medium=beamos&utm_campaign=maintenance_page'}}"
+                                <div class="maintenance-links" data-bind="visible: shopifyLink('prefilter', 0)">
+                                    <a data-bind="attr: {href: shopifyLink('prefilter', 0)}"
                                        target="_blank" id="prefilter_shop_link" data-test="maintenance-links-buy-now-pre-filter" class="maintenance-link-shop">
                                         <i class="icon-shopping-cart"></i>
                                         {{ _('Buy now') }}
@@ -99,8 +99,8 @@
                                 <small class="maintenance-description">
                                     {{ _('The pre-filter cartridge is best suited for power users who process a lot of wood, cardboard, Kraftplex or also stamp rubber.') }}
                                 </small>
-                                <div class="maintenance-links">
-                                    <a href="{{ _('https://www.mr-beam.org/en') + 'mr-beam-vorfilter-kartusche-5er-pack?utm_source=beamos&utm_medium=beamos&utm_campaign=maintenance_page'}}"
+                                <div class="maintenance-links" data-bind="visible: shopifyLink('prefilter_heavy_duty', 0)">
+                                    <a data-bind="attr: {href: shopifyLink('prefilter_heavy_duty', 0)}"
                                        target="_blank" id="prefilter_shop_link" data-test="maintenance-links-buy-now-pre-filter" class="maintenance-link-shop">
                                         <i class="icon-shopping-cart"></i>
                                         {{ _('Buy now') }}
@@ -129,8 +129,8 @@
                     <small class="maintenance-description">
                         {{ _('The main filter is a combined hepa and activated carbon filter. It filters both tiny particles and odours from the exhaust air.*') }}
                     </small>
-                    <div class="maintenance-links">
-                        <a href="{{ _('https://www.mr-beam.org/en') + '/products/aktivkohlefilter-inklusive-zehn-vorfilter?utm_source=beamos&utm_medium=beamos&utm_campaign=maintenance_page'}}"
+                    <div class="maintenance-links"  data-bind="visible: shopifyLink('carbonfilter', 0)">
+                        <a data-bind="attr: {href: shopifyLink('carbonfilter', 0)}"
                            target="_blank" id="carbon_filter_shop_link" data-test="maintenance-links-buy-now-main-filter" class="maintenance-link-shop">
                             <i class="icon-shopping-cart"></i>
                             {{ _('Buy now') }}
