SW-3726 Send laser cutter mode details to frontend

--- a/octoprint_mrbeam/templates/mrbeam_initscript.jinja2
+++ b/octoprint_mrbeam/templates/mrbeam_initscript.jinja2
@@ -19,6 +19,8 @@
     var MRBEAM_GRBL_VERSION = "{{ grbl_version }}";
     var INIT_TS_MS = "{{ init_ts_ms }}";
     var INITIAL_CALIBRATION = false;
+    var LASER_CUTTER_MODE_ID = "{{ laser_cutter_mode_id }}";
+    var LASER_CUTTER_MODE_NAME = "{{ laser_cutter_mode_name }}";
 
     window.mrbeam = {};
 </script>
