--- a/octoprint_mrbeam/templates/mrbeam_initscript.jinja2
+++ b/octoprint_mrbeam/templates/mrbeam_initscript.jinja2
@@ -19,6 +19,7 @@
     var MRBEAM_GRBL_VERSION = "{{ grbl_version }}";
     var INIT_TS_MS = "{{ init_ts_ms }}";
     var INITIAL_CALIBRATION = false;
+    let LASER_CUTTER_MODE_ID = 1;  // TODO: SW-3719 get real value
 
     window.mrbeam = {};
 </script>
