SW-3810 Frontend - Implement a mode switcher in the plugin header (#1810)
* Add laser cutter mode switch

* Update octoprint_mrbeam/static/js/app/view-models/working-area.js

Co-authored-by: khaledsherkawi <54568489+khaledsherkawi@users.noreply.github.com>

* Update octoprint_mrbeam/static/js/app/view-models/working-area.js

Co-authored-by: khaledsherkawi <54568489+khaledsherkawi@users.noreply.github.com>

* Update octoprint_mrbeam/static/js/app/view-models/working-area.js

Co-authored-by: khaledsherkawi <54568489+khaledsherkawi@users.noreply.github.com>

* Update octoprint_mrbeam/static/js/app/view-models/working-area.js

Co-authored-by: khaledsherkawi <54568489+khaledsherkawi@users.noreply.github.com>

* Update octoprint_mrbeam/static/js/app/view-models/working-area.js

Co-authored-by: khaledsherkawi <54568489+khaledsherkawi@users.noreply.github.com>

* Update octoprint_mrbeam/static/js/app/view-models/working-area.js

Co-authored-by: khaledsherkawi <54568489+khaledsherkawi@users.noreply.github.com>

* Update octoprint_mrbeam/static/js/app/view-models/working-area.js

Co-authored-by: khaledsherkawi <54568489+khaledsherkawi@users.noreply.github.com>

* Update octoprint_mrbeam/static/js/app/view-models/working-area.js

Co-authored-by: khaledsherkawi <54568489+khaledsherkawi@users.noreply.github.com>

* Update octoprint_mrbeam/static/js/app/view-models/working-area.js

Co-authored-by: khaledsherkawi <54568489+khaledsherkawi@users.noreply.github.com>

* Update octoprint_mrbeam/static/js/app/view-models/working-area.js

Co-authored-by: khaledsherkawi <54568489+khaledsherkawi@users.noreply.github.com>

* Run pre-commit

* wip switch component

* Everything but the translations

* Mark strings for translation

* Code cleanup

* Run pre-commit

---------

Co-authored-by: khaledsherkawi <54568489+khaledsherkawi@users.noreply.github.com>

--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -3982,3 +3982,12 @@ div.hopscotch-bubble .hopscotch-bubble-number {
   color: #638ba0;
 }
 /* Better together - end */
+
+/* Laser cutter mode - start */
+#laser_cutter_mode_select {
+  width: auto;
+  max-width: 100%;
+  margin-bottom: 0;
+  margin-left: 20px;
+}
+/* Laser cutter mode - end */
