--- a/octoprint_mrbeam/templates/mrbeam_initscript.jinja2
+++ b/octoprint_mrbeam/templates/mrbeam_initscript.jinja2
@@ -19,8 +19,7 @@
     var MRBEAM_GRBL_VERSION = "{{ grbl_version }}";
     var INIT_TS_MS = "{{ init_ts_ms }}";
     var INITIAL_CALIBRATION = false;
-    var LASER_CUTTER_MODE_ID = "{{ laser_cutter_mode_id }}";
-    var LASER_CUTTER_MODE_NAME = "{{ laser_cutter_mode_name }}";
+    var LASER_CUTTER_MODE = "{{ laser_cutter_mode }}";
 
     window.mrbeam = {};
 </script>
