SW-3726 backend - implement a laser cutter mode (#1807)
* SW-3726 Add a laser cutter mode model class

* SW-3726 Add a laser cutter mode service class

* SW-3726 Implement the laser cutter mode service

* SW-3726 Send laser cutter mode details to frontend

* SW-3726 Refactor to fix code smells

* SW-3726 Fix bug

* SW-3726 Fix duplication

* Fix laser cutter mode model and add tests

* Laser cutter mode service fixes and tests

* Docstrings in Google style

* Change laser cutter mode model to only use id

* implement todos

* Cleanup

* Fix reding laser_cutter_mode from settings

* Fix

* Fix

* Add laser cutter mode change backend code

---------

Co-authored-by: irlaec <irlaec@gmail.com>

--- a/octoprint_mrbeam/templates/mrbeam_initscript.jinja2
+++ b/octoprint_mrbeam/templates/mrbeam_initscript.jinja2
@@ -19,7 +19,7 @@
     var MRBEAM_GRBL_VERSION = "{{ grbl_version }}";
     var INIT_TS_MS = "{{ init_ts_ms }}";
     var INITIAL_CALIBRATION = false;
-    let LASER_CUTTER_MODE = "default";  // TODO: SW-3719 get real value
+    var LASER_CUTTER_MODE = "{{ laser_cutter_mode }}";
 
     window.mrbeam = {};
 </script>
