replace image fix spelling remove airfilter serial from about page

--- a/octoprint_mrbeam/templates/calibration/user/view_corner_calibration.jinja2
+++ b/octoprint_mrbeam/templates/calibration/user/view_corner_calibration.jinja2
@@ -34,7 +34,7 @@
                 {{ _('Please perform a homing cycle first') }}
             </span>
         </li>
-        <li>{{ _('Wait until the engraving is finished and Mr Beam Status Lights are green. Open the safety lid again and be carefult NOT to touch the engraved material. The camera will now take a picture of the engraving.') }}</li>
+        <li>{{ _('Wait until the engraving is finished and Mr Beam Status Lights are green. Open the safety lid again and be careful NOT to touch the engraved material. The camera will now take a picture of the engraving.') }}</li>
         <li>{{ _('Start the calibration by clicking on the button, and then follow these steps:') }}
             <ul>
                 <li>{{ _('Click on the arrow head of the marker in the magnified picture.') }}</li>
