--- a/octoprint_mrbeam/templates/settings/about_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/about_settings.jinja2
@@ -24,11 +24,9 @@
                         </ul>
                         </div>
                     {% endif %}
-                    <div data-bind="visible: airfilter_serial() != undefined || (airfilter_model() != undefined && airfilter_model() != 'Unknown')">
+                    <div data-bind="visible: (airfilter_model() != undefined && airfilter_model() != 'Unknown')">
                         <strong>{{ _('Air Filter System') }}:</strong>
                         <ul class="list-unstyled">
-                            <li data-bind="visible: airfilter_serial()"><strong>{{ _('Serial number') }}:</strong> <span
-                                    data-bind="text: airfilter_serial()"></span></li>
                             <li data-bind="visible: airfilter_model() != undefined && airfilter_model() != 'Unknown'">
                                 <strong>{{ _('Model') }}:</strong> <span data-bind="text: airfilter_model()"></span>
                             </li>
