fix maintenance test and move working area before settings so backlash/percission calibration will not be enabled

--- a/octoprint_mrbeam/templates/settings/maintenance_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/maintenance_settings.jinja2
@@ -16,7 +16,7 @@
                     </div>
                     <div class="maintenance-links" data-bind="visible: shopifyLink('prefilter', 0)">
                         <a data-bind="attr: {href: shopifyLink('prefilter', 0)}"
-                           target="_blank" id="prefilter_shop_link" data-test="maintenance-links-buy-now-pre-filter" class="maintenance-link-shop">
+                           target="_blank" id="prefilter_shop_link" data-test="maintenance-links-buy-new-pre-filter-af3" class="maintenance-link-shop">
                             <i class="icon-shopping-cart"></i>
                             {{ _('Buy now') }}
                         </a>
@@ -45,7 +45,7 @@
                     </div>
                     <div class="maintenance-links" data-bind="visible: shopifyLink('carbonfilter', 0)">
                         <a data-bind="attr: {href: shopifyLink('carbonfilter', 0)}"
-                           target="_blank" id="carbon_filter_shop_link" class="maintenance-link-shop">
+                           target="_blank" id="carbon_filter_shop_link" data-test="maintenance-links-buy-now-main-filter-af3" class="maintenance-link-shop">
                             <i class="icon-shopping-cart"></i>
                             {{ _('Buy now') }}
                         </a>
@@ -101,7 +101,7 @@
                                 </small>
                                 <div class="maintenance-links" data-bind="visible: shopifyLink('prefilter_heavy_duty', 0)">
                                     <a data-bind="attr: {href: shopifyLink('prefilter_heavy_duty', 0)}"
-                                       target="_blank" id="prefilter_shop_link" data-test="maintenance-links-buy-now-pre-filter" class="maintenance-link-shop">
+                                       target="_blank" id="prefilter_shop_link" data-test="maintenance-links-buy-now-heavy-duty-pre-filter" class="maintenance-link-shop">
                                         <i class="icon-shopping-cart"></i>
                                         {{ _('Buy now') }}
                                     </a>
