refactoring ready to laser adding af3 not powered screen

--- a/octoprint_mrbeam/templates/settings/camera_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/camera_settings.jinja2
@@ -14,7 +14,7 @@
 
             <ul class="camera-requirements">
                 <li class="requirement"
-                    data-bind="css: readyToLaser.lid_fully_open() == true ? 'requirement-met' : 'requirement-not-met'">
+                    data-bind="css: mrb_state.isLidFullyOpen() == true ? 'requirement-met' : 'requirement-not-met'">
                     <span data-bind="text: lidMessage()"></span>
                 </li>
                 <li class="requirement"
