--- a/octoprint_mrbeam/templates/ready_to_laser.jinja2
+++ b/octoprint_mrbeam/templates/ready_to_laser.jinja2
@@ -1,48 +1,48 @@
-<div id="ready_to_laser_dialog" class="modal hide fade" data-backdrop="static" data-test="mrbeam-ui-modal-ready-to-laser">
-
-    <div data-bind='visible: !is_cooling_mode() || !state.interlocksClosed()'>
+<div id="ready_to_laser_dialog" class="modal hide fade" data-backdrop="static"
+     data-test="mrbeam-ui-modal-ready-to-laser">
         <div class="modal-header">
-            <a href="#" class="close" data-bind='visible: is_rtl_mode(), click: cancel_btn' aria-hidden="true">&times;</a>
-            <h3 data-bind='visible: is_rtl_mode()'>{{ _('Ready To Laser?') }}</h3>
-            <h3 data-bind='visible: !is_rtl_mode()'>{{ _('Pause') }}</h3>
+            <a href="#" class="close" data-bind='visible: !is_pause_mode(), click: cancel_btn'
+               aria-hidden="true">&times;</a>
+            <h3 data-bind='visible: !is_pause_mode()'>{{ _('Ready To Laser?') }}</h3>
+            <h3 data-bind='visible: paused()'>{{ _('Pause') }}</h3>
+            <h3 data-bind='visible: cooling()'>{{ _('Cooling') }}</h3>
+            <span data-bind="text: ready_to_laser_state()">state</span>
         </div>
-        <div class="modal-body">
-            <img data-bind='visible: !is_fan_connected()' src="/plugin/mrbeam/static/img/airfilter.jpg">
-            <img data-bind='visible: !state.interlocksClosed() && is_fan_connected()' src="/plugin/mrbeam/static/img/closelid.jpg">
-            <img data-bind='visible: state.interlocksClosed() && is_fan_connected()' src="/plugin/mrbeam/static/img/onebutton.jpg">
-            <h5 data-bind='visible: !is_fan_connected()'>{{ _('Can not detect air filter system. Is it plugged in?') }}</h5>
-            <h5 data-bind='visible: !state.interlocksClosed() && is_fan_connected()'>{{ _('Please close the lid completely before we can proceed.') }}</h5>
-            <h5 data-bind='visible: state.interlocksClosed() && is_fan_connected()'>{{ _('Everything is ready to go.') }}</h5>
-            <h5 data-bind='visible: is_fan_connected() && is_rtl_mode() && jobTimeEstimationCalculated()'>{{ _('Estimated duration') }}:
-                <span data-bind="text: jobTimeEstimationString()" style="font-size:1.2em"></span>
+        <div class="modal-body" data-bind="visible: fan_not_connected()">
+            <img src="/plugin/mrbeam/static/img/airfilter.jpg">
+            <h5>{{ _('Can not detect air filter system. Is it plugged in?') }}</h5>
+        </div>
+
+        <div class="modal-body" data-bind="visible: fan_not_on_external_power()">
+            <img src="/plugin/mrbeam/static/img/air_filter/af3-power-supply-missing.png">
+            <h5>{{ _("Air filter system doesn't see external power. Is it plugged in?") }}</h5>
+        </div>
+
+        <div class="modal-body" data-bind="visible: lid_open()">
+            <img src="/plugin/mrbeam/static/img/closelid.jpg">
+            <h5>{{ _('Please close the lid completely before we can proceed.') }}</h5>
+        </div>
+
+        <div class="modal-body" data-bind="visible: ready_to_laser()">
+            <img src="/plugin/mrbeam/static/img/onebutton.jpg">
+            <h5>{{ _('Everything is ready to go.') }}</h5>
+            <h5 data-bind="visible: jobTimeEstimationCalculated()">
+                {{ _('Estimated duration') }}:
+                <span data-bind="text: jobTimeEstimationString()" style="font-size: 1.2em"></span>
             </h5>
         </div>
-        <div class="modal-footer">
-            <a class="btn pull-left" data-bind='visible: is_rtl_mode(), click: cancel_btn' aria-hidden="true">{{ _('cancel') }}</a>
-            <a class="btn pull-left" data-bind='visible: !is_rtl_mode(), click: cancel_btn' aria-hidden="true">{{ _('Cancel Laser Job') }}</a>
-            <h4 class="pull-right" data-bind='visible: !is_fan_connected()'>{{ _('Plug in air filter system') }}</h4>
-            <h4 class="pull-right" data-bind='visible: !state.interlocksClosed() && is_fan_connected()'>{{ _('Close the lid') }}</h4>
-            <h4 id="ready_to_laser_dev_start_btn" data-test="mrbeam-ui-rady-to-laser-start-text" class="pull-right dev_start_button" data-bind='visible: state.interlocksClosed() && is_fan_connected() && is_rtl_mode()'>
-                {{ _('Press the button to start') }}
-            </h4>
-            <h4 id="ready_to_laser_dev_resume_btn" class="pull-right dev_start_button" data-bind='visible: state.interlocksClosed() && is_fan_connected() && !is_rtl_mode()'>
-                {{ _('Press the button to continue') }}
-            </h4>
-            {#                <span class="dev_start_button" id="ready_to_laser_dev_start_btn" data-bind='visible: is_rtl_mode()'>{{ _('start') }}</span>#}
-            {#                <span class="dev_start_button" data-bind='visible: !is_rtl_mode()'>{{ _('continue') }}</span>#}
-        </div>
-    </div>
 
-    <div data-bind='visible: is_cooling_mode() && state.interlocksClosed()'>
-        <div class="modal-header">
-            <h3 >{{ _('Cooling') }}</h3>
+        <div class="modal-body" data-bind="visible: paused()">
+            <img src="/plugin/mrbeam/static/img/onebutton.jpg">
+            <h5>{{ _('Everything is ready to go.') }}</h5>
         </div>
-        <div class="modal-body">
+
+        <div class="modal-body" data-bind="visible: cooling()">
             <img src="/plugin/mrbeam/static/img/cooling.jpg">
-{#  Mr Beam macht eine Kühlpause. Der Laserjob wird so bald wie möglich fortgesetzt. Sollten die Kühlpausen häufiger auftreten, reinige bitte deinen Laserkopf. Falls du den Laserkopf gerade gereinigt haben, überprüfe, ob dieser wieder richtig zusammengebaut ist.          #}
-            <h5 >{{ _('Mr Beam is pausing for a cooling break. The laser job will resume as soon as possible.') }}</h5>
+            {#  Mr Beam macht eine Kühlpause. Der Laserjob wird so bald wie möglich fortgesetzt. Sollten die Kühlpausen häufiger auftreten, reinige bitte deinen Laserkopf. Falls du den Laserkopf gerade gereinigt haben, überprüfe, ob dieser wieder richtig zusammengebaut ist.          #}
+            <h5>{{ _('Mr Beam is pausing for a cooling break. The laser job will resume as soon as possible.') }}</h5>
             <small class="muted">{{ _('If cooling pauses occur regularly, please clean your laser head. If you have just cleaned the laser head, please check if it is reassembled correctly.') }}</small>
-            <br />
+            <br/>
             <small class='muted show_only_online'>{{ _("For more information, please have a look at our article on %(opening_tag)scooling pauses%(closing_tag)s.",
                 opening_tag='<a href="https://support.mr-beam.org/support/solutions/articles/43000586688-laser-head-constantly-pauses-for-cooling" target="_blank"><i class="icon-external-link"></i>&nbsp;',
                 closing_tag='</a>') }}</small>
@@ -50,11 +50,25 @@
                 opening_tag='<a href="#" onclick="mrbeam.openOfflineKbUrl(\'43000586688_cooling_pause.pdf\')"><i class="icon-file-text"></i>&nbsp;',
                 closing_tag='</a>') }}</small>
         </div>
-        <div class="modal-footer">
-            <a class="btn pull-left" data-bind='click: cancel_btn' aria-hidden="true">{{ _('Cancel Laser Job') }}</a>
-            <h4 class="pull-right" data-bind='visible: !state.interlocksClosed()'>{{ _('Close the lid') }}</h4>
-            <h4 class="pull-right" data-bind='visible: state.interlocksClosed'>{{ _('Please wait') }}</h4>
-        </div>
-    </div>
 
+        <div class="modal-footer">
+            <a class="btn pull-left" data-bind='visible: !is_pause_mode(), click: cancel_btn'
+               aria-hidden="true">{{ _('cancel') }}</a>
+            <a class="btn pull-left" data-bind='visible: is_pause_mode(), click: cancel_btn'
+               aria-hidden="true">{{ _('Cancel Laser Job') }}</a>
+
+            <h4 class="pull-right" data-bind='visible: fan_not_connected() || fan_not_on_external_power()'>{{ _('Plug in air filter system') }}</h4>
+            <h4 class="pull-right"
+                data-bind='visible: lid_open()'>{{ _('Close the lid') }}</h4>
+            <h4 id="ready_to_laser_dev_start_btn" data-test="mrbeam-ui-rady-to-laser-start-text"
+                class="pull-right dev_start_button"
+                data-bind='visible: ready_to_laser()'>
+                {{ _('Press the button to start') }}
+            </h4>
+            <h4 id="ready_to_laser_dev_resume_btn" class="pull-right dev_start_button"
+                data-bind='visible: paused()'>
+                {{ _('Press the button to continue') }}
+            </h4>
+            <h4 class="pull-right" data-bind='visible: cooling()'>{{ _('Please wait') }}</h4>
+        </div>
 </div>
