--- a/octoprint_mrbeam/templates/calibration/user/view_corner_calibration.jinja2
+++ b/octoprint_mrbeam/templates/calibration/user/view_corner_calibration.jinja2
@@ -22,10 +22,10 @@
         <li>{{ _('Focus the laser head on the material.') }}<br>
             <strong>{{ _('Note: ') }}</strong>{{ _('Even with the Height Extension installed, you must focus the laser head on the paper in the corners.') }}<br>
         <img class="focus_reminder" src="/plugin/mrbeam/static/img/focus_reminder.png"></li>
-        <li>{{ _('Home the laserhead.') }}<br>
-            <button class="btn btn-primary" data-bind="click: function() { workingArea.performHomingCycle('corner_calibration') }"><i class="icon-home"></i> {{ _('Homing Cycle') }}</button></li>
 
         <li>{{ _('Engrave the calibrations markers on your material by clicking on this button:') }}<br>
+        <strong>{{ _('Note: ') }}</strong> {{ _('Before the engraving of the calibration markers gets started, the laser head automatically moves to the home position.') }}<br>
+        {{ _('Please ensure that there is nothing in the working area except the material for the markers.') }}<br>
             <button class="btn btn-primary"
                     data-bind="click: engraveMarkers, enable: (!camera.state.isLocked() && !camera.state.isConnecting() && camera.state.isOperational())">
                 {{ _('Engrave Calibration Markers')  }}
