--- a/octoprint_mrbeam/templates/ready_to_laser.jinja2
+++ b/octoprint_mrbeam/templates/ready_to_laser.jinja2
@@ -14,7 +14,7 @@
 
         <div class="modal-body" data-bind="visible: fan_not_on_external_power">
             <img src="/plugin/mrbeam/static/img/air_filter/af3-power-supply-missing.png">
-            <h5>{{ _("Air filter system doesn't see external power. Is it plugged in?") }}</h5>
+            <h5>{{ _("The Air Filter System can't recognise a power supply unit. Please make sure that it is plugged in.") }}</h5>
         </div>
 
         <div class="modal-body" data-bind="visible: lid_open">
